--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.0.1",
-    "@angular/cdk": "8.0.1",
-    "@angular/common": "8.0.1",
-    "@angular/compiler": "8.0.1",
-    "@angular/core": "8.0.1",
-    "@angular/forms": "8.0.1",
-    "@angular/material": "8.0.1",
-    "@angular/material-moment-adapter": "8.0.1",
-    "@angular/platform-browser": "8.0.1",
-    "@angular/platform-browser-dynamic": "8.0.1",
-    "@angular/router": "8.0.1",
+    "@angular/animations": "^15.2.4",
+    "@angular/cdk": "^15.2.4",
+    "@angular/common": "^15.2.4",
+    "@angular/compiler": "^15.2.4",
+    "@angular/core": "^15.2.4",
+    "@angular/forms": "^15.2.4",
+    "@angular/material": "^15.2.4",
+    "@angular/material-moment-adapter": "^15.2.4",
+    "@angular/platform-browser": "^15.2.4",
+    "@angular/platform-browser-dynamic": "^15.2.4",
+    "@angular/router": "^15.2.4",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.5",
     "jquery": "^3.3.1",
@@ -32,26 +32,26 @@
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.0",
-    "@angular/cli": "8.0.3",
-    "@angular/compiler-cli": "8.0.1",
-    "@angular/language-service": "8.0.1",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.106",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~2.8.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.2",
-    "karma-jasmine": "^1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "@angular-devkit/build-angular": "^15.2.4",
+    "@angular/cli": "^15.2.4",
+    "@angular/compiler-cli": "^15.2.4",
+    "@angular/language-service": "^15.2.4",
+    "@types/jasmine": "~4.3.1",
+    "@types/jasminewd2": "~2.0.10",
+    "@types/node": "^18.15.11",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "~4.6.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.4.1",
+    "karma-chrome-launcher": "~3.1.1",
+    "karma-cli": "~2.0.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
     "protractor": "~5.1.2",
-    "source-map-explorer": "^1.5.0",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.15.0",
-    "typescript": "3.4.5"
+    "source-map-explorer": "^2.5.3",
+    "ts-node": "~10.9.1",
+    "tslint": "~5.20.1",
+    "typescript": "4.8.2"
   }
 }
